Fixing minor spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ footer .social-media a:hover svg {
     display: none;
   }
 
-  .bio .content {
+  .content {
     padding: 4em 2em;
     width: 100vw;
   }
